--- a/Wave_Shooter.csproj
+++ b/Wave_Shooter.csproj
@@ -81,10 +81,12 @@
     <Compile Include="Assets\Scripts\Enemies_Spawning.cs" />
     <Compile Include="Assets\Scripts\Mouse_Aim.cs" />
     <Compile Include="Assets\Scripts\ObjectPool.cs" />
+    <Compile Include="Assets\Scripts\Player_Death.cs" />
     <Compile Include="Assets\Scripts\Player_Movement.cs" />
     <Compile Include="Assets\Scripts\Projectile.cs" />
     <Compile Include="Assets\Scripts\Shooter.cs" />
     <Compile Include="Assets\Scripts\Zombie_Behavior.cs" />
+    <Compile Include="Assets\Scripts\Zombie_Damage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
